using System;
using Sirenix.OdinInspector;

[Serializable]
public class Set {
	[Required] public Item item;
	public int quantity;
}