using UnityEngine;

public class DayManager : MonoBehaviour {

	#region Fields

	// Static

	// Public

	// Hidden Public

	// Private

	// Properties

	// Components

	// Events

	#endregion

	#region Unity Messages

	private void Start() { }

	private void Update() { }

	#endregion

	#region Methods

	#endregion

}