using TMPro;
using UnityEngine;
using UnityEngine.Serialization;
using UnityEngine.UI;

public class UIInteraction : MonoBehaviour {

	#region Fields

	public Image button;
	public TextMeshProUGUI label;

	#endregion

}