using UnityEngine;

public class UIManager : MonoBehaviour {

	#region Fields

	// Public

	public UIInput uiInput;
	
	// Hidden Public

	// Private

	// Properties

	// Components

	// Events

	#endregion
	
	#region Unity Messages


	private void Start() { }

	private void Update() { }

	#endregion

	#region Methods
	

	#endregion

}